# EEE3061WDesignProject

./: .gitignore  README.md
Circuits/: ControllerBoardPCB.xls  LineSensorSchematic.SchDoc  PCBCablesandConnectors.xlsx  PowerBoardPCBRev1.xls
Circuits/EEE3061WDesignProjectLineSensorBoard/: EEE3061WDesignProjectLineSensorBoard.OutJob  EEE3061WDesignProjectLineSensorBoard.PrjPcb  LineSensorBoardPCB.PcbDoc  LineSensorBoardPCBRev2.PcbDoc  LineSensorBoardSchematic.SchDoc  LineSensorComponents.PcbLib  LineSensorComponents.SchLib  LineSensorVeroBoard.diy  LineSensorVeroBoardV2.diy
Circuits/EEE3061WDesignProjectLineSensorModule/: EEE3061WDesignProjectLineSensorModule.PrjPcb  LineSensorModuleSchematic.SchDoc  SensorModulePCB.PcbDoc
Circuits/EEE3061WDesignProject_ControllerBoard/: ControllerBoardPCB.PcbDoc  ControllerBoardPCBMechanicalOut.DXF  ControllerBoardSchematic.SchDoc  CopperEtchingOutput.OutJob  EEE3061WDesignProject_ControllerBoard.OutJob  EEE3061WDesignProject_ControllerBoard.PrjPCB  STM32F051C6Breakout.PcbLib  STM32F051C6Breakout.SchLib
Circuits/EEE3061WDesignProject_ControllerBoardV2/: ControllerBoardCMPV2.PcbLib  ControllerBoardCMPV2.SchLib  ControllerBoardV2PCB.PcbDoc  ControllerBoardV2Schematic.SchDoc  EEE3061WDesignProject_ControllerBoardV2.OutJob  EEE3061WDesignProject_ControllerBoardV2.PrjPcb  STM32F051C6Breakout.PcbLib  STM32F051C6Breakout.SchLib
Circuits/EEE3061WDesignProject_LEDLightSensor/: EEE3061WDesignProject_LEDLightSensor.OutJob  EEE3061WDesignProject_LEDLightSensor.PrjPcb  LightSensorSchematic.SchDoc  LightSensorSchematic.sch
Circuits/EEE3061WDesignProject_LEDLightSensor/__Previews/: LightSensorSchematic.SchDocPreview
Circuits/EEE3061WDesignProject_LEDLightSensorV2.0/: EEE3061WDesignProject_LEDLightSensorV2.0.PrjPcb  LightSensorSchematic.SchDoc
Circuits/EEE3061WDesignProject_LineSensor/: EEE3061WDesignProject_LineSensor.PrjPcb  LineSensorSchematic.SchDoc
Circuits/EEE3061WDesignProject_PowerBoard/: CopperEtchingOutput.OutJob  EEE3061WDesignProject_PowerBoard.OutJob  EEE3061WDesignProject_PowerBoard.PrjPcb  L293DNE.PcbLib  L293DNE.SchLib  PowerBoardPCB.PcbDoc  PowerBoardPCBRev1.PcbDoc  PowerBoardSchematic.SchDoc
Circuits/EEE3061WDesignProject_PowerBoardV2/: EEE3061WDesignProject_PowerBoardV2.PrjPcb  PowerBoardPCB.PcbDoc  PowerBoardSchematicV2.SchDoc
Circuits/Finals/ControllerBoard/: ControllerBoardV2PCB.GBL  ControllerBoardV2PCB.GBO  ControllerBoardV2PCB.GBS  ControllerBoardV2PCB.GM1  ControllerBoardV2PCB.GTL  ControllerBoardV2PCB.GTO  ControllerBoardV2PCB.GTS  ControllerBoardV2PCB.TXT
Circuits/Finals/PowerBoard/: PowerBoardPCB.GBL  PowerBoardPCB.GBO  PowerBoardPCB.GBS  PowerBoardPCB.GM1  PowerBoardPCB.GTL  PowerBoardPCB.GTO  PowerBoardPCB.GTS  PowerBoardPCB.TXT
Circuits/Finals/SensorBoard/: LineSensorBoardPCBRev2.GBL  LineSensorBoardPCBRev2.GBO  LineSensorBoardPCBRev2.GBS  LineSensorBoardPCBRev2.GM1  LineSensorBoardPCBRev2.GTL  LineSensorBoardPCBRev2.GTO  LineSensorBoardPCBRev2.GTS  (+1 more)
Code/: .cproject  .gitignore  .project  EEE3061WDesignProjectCode Data Capture.launch  EEE3061WDesignProjectCode Debug.launch  README.txt
Code/include/: TempSense_lib.h  adcTempSense_lib.h  ledGPIOB_lib.h  ledLightSensor_lib.h  pbGPIOA_lib.h  pwmMotor_lib.h  serialTerminal_lib.h  spiGyro_lib.h
Code/node/: simpleClient.js  simpleServer.js
Code/rtos/: .cproject  .gitignore  .project
Code/rtos-clion/: .gitignore  CMakeLists.txt
Code/rtos-clion/include/: genericMessaging_lib.h
Code/rtos-clion/src/: USARTInTask_task.c  bossTask_task.c  genericMessaging_lib.c  hal_lib.c  main.c  motorTask_task.c  userTasks_task.c
Code/rtos/src/: main.c  (+14 more)
Code/single-thread/: .cproject
Code/src/: TempSense_lib.c  adcTempSense_lib.c  ledGPIOB_lib.c  ledLightSensor_lib.c  main.c  pbGPIOA_lib.c  pwmMotor_lib.c  serialTerminal_lib.c  spiGyro_lib.c  syscalls.c
Data/: SerialLogger.m  SerialLogger_LED.m
Data/real_time_data_serial/: real_time_data_serial.m
Docs/: Specification+for+race+demo+2015.docx  Specification+for+yaw+sensor+demo+2015.docx  yaw+sensor+rubric.docx
ProjectReport/: EEE3061WProjectReport-ConceptHandin.tex  EEE3061WProjectReport.sublime-project  EEE3061WProjectReport.sublime-workspace  EEE3061WProjectReport.tex  woodamble.tex
ProjectReport/ConceptualReport/: EEE3061WProjectReport-ConceptHandin.tex
ProjectReport/ConceptualReport (1st Semester)/: woodamble.tex
ProjectReport/ConceptualReport (2st Semester)/: EEE3061WProjectReport-ConceptHandin.tex
ProjectReport/FinalReport/: EEE3061WProjectReport-FinalReport.tex
ProjectReport/FinalReport-V0.9/: EEE3061WProjectReport-FinalReport.tex
ProjectReport/FinalReport-V1.0/: EEE3061WProjectReport-FinalReportV1.0.tex  references.bib  woodamble.tex
ProjectReport/FinalReport-V1.1/: EEE3061WProjectReport-FinalReportV1.1.tex  references.bib  woodamble.tex
ProjectReport/RGLightSensor/: EEE3061WProjectReport-RGLightSensor.tex
ProjectReport/RobotDemoReport/: RobotDemoReport.tex  references.bib
(+64 files in other folders)
